[metadata]
name = csv_to_json
version = 1.0.0
author = Micheal Durodola
author_email = micdurodola@gmail.com
description = A simple Python package
long_description = file: README.md, LICENSE.txt
long_description_content_type = text/markdown
url = https://gitlab.com/codasteroid/basicpkg
project_urls =
    Bug Tracker = https://github.com/micdurodola/convert_csv_to_json/issues
    repository = https://github.com/micdurodola/convert_csv_to_json
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src